Fix for overlapping of navigation bar

--- a/static/css/bootstrapfix.css
+++ b/static/css/bootstrapfix.css
@@ -1,5 +1,5 @@
 body {
-    padding-top: 2em;
+    padding-top: 50px;
 }
 
 .top-buffer {margin-top: 10px;}
